@@ -35,12 +35,21 @@ Licensed under the MIT License.
   <!-- CosmosSkip - Needed temporary values to 10% not fail. -->
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <jacoco.min.linecoverage>0.01</jacoco.min.linecoverage>
-    <jacoco.min.branchcoverage>0.01</jacoco.min.branchcoverage>
+    <jacoco.min.linecoverage>0.10</jacoco.min.linecoverage>
+    <jacoco.min.branchcoverage>0.05</jacoco.min.branchcoverage>
 
     <!-- CosmosSkip - This is not a module we want/expect external customers to consume. Skip breaking API checks. -->
     <!-- This can only be enabled once we release GA, as it needs a stable version to check for breaking changes. -->
     <revapi.skip>true</revapi.skip>
+
+    <!-- Configures the Java 9+ run to perform the required module exports, opens, and reads that are necessary for testing but shouldn't be part of the module-info. -->
+    <javaModulesSurefireArgLine>
+      --add-opens com.azure.encryption.cosmos/com.azure.encryption.cosmos=ALL-UNNAMED
+      --add-opens com.azure.encryption.cosmos/com.azure.encryption.cosmos.implementation=ALL-UNNAMED
+      --add-opens com.azure.encryption.cosmos/com.azure.encryption.cosmos.keyprovider=ALL-UNNAMED
+      --add-opens com.azure.encryption.cosmos/com.azure.encryption.cosmos.util=ALL-UNNAMED
+      --add-opens com.azure.encryption.cosmos/com.azure.encryption.cosmos.models=ALL-UNNAMED
+    </javaModulesSurefireArgLine>
   </properties>
 
   <dependencies>
@@ -199,17 +208,6 @@ Licensed under the MIT License.
 
   <build>
     <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version> <!-- {x-version-update;org.apache.maven.plugins:maven-compiler-plugin;external_dependency} -->
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-          <failOnWarning>false</failOnWarning>
-        </configuration>
-      </plugin>
-
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
